@@ -4,9 +4,8 @@
  * Copyright 1999 by Kalle Dalheimer, released under Artistic License.
  */
 
+
 #include "kchartConfigDialog.h"
-
-
 #include "kchartConfigDialog.moc"
 
 #include <kapp.h>
@@ -21,11 +20,11 @@ KChartConfigDialog::KChartConfigDialog( KChartParameters* params,
     // PENDING(kalle) _xstep only for axes charts
     //_geompage = new KChartGeometryConfigPage( this );
     //addTab( _geompage, i18n( "&Geometry" ) );
-
+    setCaption(i18n( "Chart config dialog" ));
 	// Color page
     _colorpage = new KChartColorConfigPage( this );
     addTab( _colorpage, i18n( "&Colors" ) );
-    
+
     if(!_params->isPie())
     	{
     	_parameterpage = new KChartParameterConfigPage(_params,this );
@@ -35,20 +34,27 @@ KChartConfigDialog::KChartConfigDialog( KChartParameters* params,
     	{
     	_parameterpiepage = new KChartParameterPieConfigPage(_params,this );
     	addTab( _parameterpiepage, i18n( "&Parameter" ) );
-    	
+
     	_piepage = new KChartPieConfigPage(_params, this );
     	addTab( _piepage, i18n( "&Pie" ) );
-
     	}
-    	  
+
     _parameterfontpage = new KChartFontConfigPage(_params,this );
     addTab( _parameterfontpage, i18n( "&Font" ) );
-    	
+
+    if(!_params->isPie()&&_params->threeD())
+    	{
+        _parameter3dpage = new KChartParameter3dConfigPage(_params,this );
+        addTab( _parameter3dpage,i18n("3D Parameters"));
+        }
+
     //init
     defaults();
-	// setup buttons
+
+    // setup buttons
     setDefaultButton( i18n( "Defaults" ) );
     setCancelButton( i18n( "Cancel" ) );
+
     connect( this, SIGNAL( applyButtonPressed() ), this, SLOT( apply() ) );
     connect( this, SIGNAL( defaultButtonPressed() ), this, SLOT( defaults() ) );
 }
@@ -73,15 +79,21 @@ void KChartConfigDialog::apply()
     _params->YLabelColor = _colorpage->yLabelColor();
     _params->YLabel2Color = _colorpage->yLabel2Color();
     //_params->EdgeColor = _colorpage->edgeColor();
-    
+
     if(!_params->isPie())
-    	_parameterpage->apply();
+        {
+        _parameterpage->apply();
+        if(_params->threeD())
+                _parameter3dpage->apply();
+        }
     else
     	{
     	_parameterpiepage->apply();
     	_piepage->apply();
     	}
+
     _parameterfontpage->apply();
+
 //     for( uint i = 0; i < NUMDATACOLORS; i++ )
 // 	_params->_datacolors.setColor( i, _colorpage->dataColor( i ) );
 }
@@ -105,16 +117,21 @@ void KChartConfigDialog::defaults()
     _colorpage->setYLabelColor( _params->YLabelColor );
     _colorpage->setYLabel2Color( _params->YLabel2Color );
     //_colorpage->setEdgeColor( _params->EdgeColor );
-    
+
     if(!_params->isPie())
+        {
     	_parameterpage->init();
-    	
+        if(_params->threeD())
+                _parameter3dpage->init();
+        }
     else
     	{
     	_parameterpiepage->init();
     	_piepage->init();
     	}
+
     _parameterfontpage->init();
+
 //     for( uint i = 0; i < NUMDATACOLORS; i++ )
 // 	_colorpage->setDataColor( i, _params->_datacolors.color( i ) );
 }
