@@ -77,3 +77,7 @@ But Pb for writing % in label for the moment it's not good
 ------------------------------------------------------
 -Add new icon for choose chart
 -bug fix.
+
+2000-04-01 - Montel laurent <montell@club-internet.fr>
+------------------------------------------------------
+-Improved "Config"
